# Zyren

./: .gitignore  .seoggirc  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  bootstrap.seo  build.seo  build.sh  install.seo  install.sh  project.seo  seoggi-config.cmake.in  seoggi.bat  seoggi.pc.in  setup.sh  test.sh
.github/: FUNDING.yml  funding.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
ai/inference/: predictor.seo
ai/models/: genetic_algorithm.seoggi  neural_network.seo
ai/training/: data_processor.seoggi  validator.seo
bootstrap/: CMakeLists.txt  README.md  compiler.c  install.sh
bootstrap/include/: codegen.hpp  lexer.hpp  parser.hpp
bootstrap/linux/: bootstrap.c  build.sh  manage.sh  uninstall.sh  update.sh
bootstrap/macos/: bootstrap.c  build.sh  manage.sh  uninstall.sh  update.sh
bootstrap/shared/: compiler.h
bootstrap/src/: codegen.cpp  lexer.cpp  main.cpp  parser.cpp
bootstrap/windows/: bootstrap.c  build.bat  manage.bat  uninstall.bat  update.bat
cmake/: SeoggiCompile.cmake  seoggi-toolchain.cmake
cmake/templates/: ai_component.cmake
core/: CMakeLists.txt  base.seo  ipc.seo  kernel.seo  main.seo  memory.seo  process.seo  runtime.seo  seoggi_bootstrap  sync.seo  syntax.seo  types.seo  universal.seo
core/ai/: CMakeLists.txt  math.seo  model.seo  neural.seo  training_manager.seo
core/ai/cognition/: CMakeLists.txt  decision_system.seo  integrated_decision.seo  value_belief_system.seo
core/ai/consciousness/: CMakeLists.txt  meta_cognitive.seo
core/ai/integration/: CMakeLists.txt  core_integration.seo
core/ai/interaction/: CMakeLists.txt  interaction_controller.seo
core/ai/language/: CMakeLists.txt  quantum_nlp.seo
core/ai/learning/: advanced_learning.seo
core/ai/memory/: CMakeLists.txt  advanced_memory.seo  bounded_memory.seo
core/ai/models/: CMakeLists.txt
core/ai/neural/: CMakeLists.txt  network.cpp  network.seo  quantum_neural.seo
core/ai/neural/include/: network.h
core/ai/personality/: CMakeLists.txt  emotional_core.seo
core/ai/quantum/: CMakeLists.txt  circuit.cpp  circuit.seo  gates.seo
core/ai/quantum/include/: circuit.h
core/ai/reasoning/: quantum_reasoning.seo
core/ai/safety/: CMakeLists.txt  deployment_system.seo  model_engine.seo  model_framework.seo  safety_system.seo  training_infrastructure.seo  type_system.seo  validation_system.seo
core/ai/safety/neural/: quantum_neural.seo
core/ai/safety/reasoning/: quantum_reasoning.seo
core/ai/training/: CMakeLists.txt
core/browser/: engine.seo
core/commands/: test_commands.seo
core/common/: config.seo  utils.seo
core/compiler/: CMakeLists.txt  ai_features.seo  analyzer.seo  ast.seo  code_generator.seoggi  codegen.seo  compiler.py  compiler.rs  compiler.seo  driver.seo  error.seo  ir_gen.seo  lexer.seo  optimizer.seoggi  parser.seo  seoc.c  seoggi_compiler  smt.cpp  smt.seo  tokenizer.seo  type.seo  type_checker.cpp  type_checker.seo
core/compiler/analysis/: CMakeLists.txt  effects.seo  type_checker.seo
core/compiler/backend/: CMakeLists.txt  seoggi_backend.cpp  seoggi_backend.hpp
core/compiler/codegen/: generator.seo
core/compiler/frontend/: CMakeLists.txt  lexer.seo  parser.seo  token.seo
core/compiler/include/seoggi/compiler/: smt.hpp  type_checker.hpp
core/compiler/ir/: CMakeLists.txt  basic_block.seo  builder.seo  function.seo  instruction.seo  module.seo  type.seo  value.seo
core/compiler/passes/: CMakeLists.txt  constant_folding.seo  dead_code_elimination.seo  inlining.seo  pass_manager.seo
core/compiler/tests/: type_checker_test.seo
core/interpreter/: interpreter.seo
core/modules/: ai.seo  kernel.seo  web.seo
core/net/: network.seo
core/os/: device.seo  memory.seo  process.seo
core/parser/: lexer.seo  lexer.seoggi  parser.seo
core/runtime/: CMakeLists.txt  ai_runtime.seo  gate_executor.seo  model_manager.cpp  model_manager.hpp  model_manager.seo  neural_runtime.cpp  neural_runtime.hpp  neural_runtime.seo  quantum_runtime.cpp  quantum_runtime.hpp  quantum_runtime.seo  state_manager.cpp  state_manager.hpp  state_manager.seo  training_engine.seo
core/standard_library/: io.seoggi  math.seo  string.seoggi
core/system/: model_manager.seo  runtime_system.seo  safety_system.seo
core/types/: advanced.seo  types.seo
docs/: ARCHITECTURE.md  CONTRIBUTING.md  README.md  advanced_topics.md  api.seo  api_reference.md  getting_started.md  installation.seo  language_spec.md  testing.md  usage.seo  userguide.md
docs/spec/: language_spec.md
examples/: ai_example.seoggi  ai_example.zy  browser.seo  calculator.seo  embedded.seo  hello.seo  hello.zy  hello_world.seo  hello_world.seoggi  meta.seo  os_example.zy  print_text.seo  universal_app.seo  web_browser_example.zy  web_server.seoggi  website_example.zy  zero_cost.seo
examples/ai/: ai_model.seo
install/: install.sh  install_linux.sh  install_macos.sh  install_windows.ps1  installer.seo
quantum/: CMakeLists.txt
quantum/circuit/: simulator.seo
quantum/state/: vector.seo
runtime/: CMakeLists.txt
runtime/vm/: interpreter.seo  thread.seo
scripts/: generate_sources.sh
src/: bootstrap.zy  compiler.seo  interpreter.seo  lexer.seo  main.cpp  main.seo  parser.seo  stdlib.seo  syntax.zy
std/: CMakeLists.txt  args.seo  fs.seo  io.seo  lib.seo  neural.seo  prelude.seo  process.seo  quantum.seo
tests/: CMakeLists.txt  basic_test.cpp  integration_tests.seo  lexer_test.seo  parser_test.seo  test1.zy  test2.zy  test3.zy  test_lexer.seo  test_runner.seo  type_checker_test.seo  unit_tests.seo
tests/ai/quantum/: qnn_test.cpp
tests/bootstrap/: codegen_test.seo  parser_test.zy
tests/compiler/: lexer_test.zy
tests/compiler/lexer/: lexer_test.zy
tests/integration/: web_integration_tests.seo
tests/performance/: benchmarks.seoggi
tests/unit/: core_tests.seoggi
tests/unit/ai/neural/: network_test.cpp
tests/unit/compiler/: lexer_test.cpp
tests/unit/quantum/: circuit_test.cpp
tools/: build.seo  compiler.seo  debugger.seo  package_manager.seoggi  profiler.seo  seo  seo.seo  seoggi.seo
(+139 files in other folders)
